# cmaker

./: README.md  generator.py  install.sh  uninstall.sh
templates/cpp_clean/: CMakeLists.txt  main.cpp
templates/cpp_gl/: CMakeLists.txt
